--- a/AqarPress.Web/AqarPress.Web.csproj
+++ b/AqarPress.Web/AqarPress.Web.csproj
@@ -7,19 +7,22 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.1.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.5.2" />
     <PackageReference Include="SD.LLBLGen.Pro.ORMSupportClasses" Version="5.5.2" />
     <PackageReference Include="Serilog" Version="2.8.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\AqarPress.Core\AqarPress.Core.csproj" />
+    <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Areas\Mobile\Data\" />
     <Folder Include="Areas\Mobile\Models\" />
     <Folder Include="Areas\Mobile\Views\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AqarPress.Core\AqarPress.Core.csproj" />
   </ItemGroup>
 
 </Project>
