--- a/AqarPress.Web/appsettings.Development.json
+++ b/AqarPress.Web/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "connectionString": "Server=DESKTOP-1RNONJG\\AYAMSSQLSERVER; Database=AqarPress;Integrated Security=True",
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
