--- a/Data/AqarPress.Migration/packages.config
+++ b/Data/AqarPress.Migration/packages.config
@@ -18,18 +18,28 @@
   <package id="FluentMigrator.Runner.SQLite" version="3.2.1" targetFramework="net461" />
   <package id="FluentMigrator.Runner.SqlServer" version="3.2.1" targetFramework="net461" />
   <package id="FluentMigrator.Runner.SqlServerCe" version="3.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Options" version="2.0.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.6" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="NPOI" version="2.4.1" targetFramework="net461" />
   <package id="SharpZipLib" version="1.0.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="System.Web.Helpers.Crypto" version="3.2.3" targetFramework="net461" />
 </packages>
