--- a/AqarPress.Core/packages.config
+++ b/AqarPress.Core/packages.config
@@ -13,7 +13,8 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
-  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.5.3" targetFramework="net461" />
+  <package id="SD.LLBLGen.Pro.DQE.SqlServer" version="5.5.2" targetFramework="net461" />
+  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.5.2" targetFramework="net461" />
   <package id="Serilog" version="2.8.0" targetFramework="net461" />
   <package id="Sigil" version="4.7.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
