--- a/AqarPress.Web/Properties/launchSettings.json
+++ b/AqarPress.Web/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "AqarPress.Web": {
       "commandName": "Project",
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:5001;",
+      "applicationUrl": "http://192.168.1.10:5001;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
