--- a/AqarPress.Web/appsettings.Development.json
+++ b/AqarPress.Web/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "connectionString": "Server=.; Database=DB_A4D6F8_AqarPress;Integrated Security=True"
-  //"connectionstring": "Data Source=SQL5044.site4now.net;Initial Catalog=DB_A4D6F8_AqarPress;User Id=DB_A4D6F8_AqarPress_admin;Password=Yota1379."
+  //"connectionstring": "Data Source=SQL5044.site4now.net;Initial Catalog=DB_A4D6F8_AqarPress;User Id=DB_A4D6F8_AqarPress_admin;Password=Yota1379"
 
 
 }
