--- a/Data/DatabaseGeneric/DB_A4D6F8_AqarPress.Data.csproj
+++ b/Data/DatabaseGeneric/DB_A4D6F8_AqarPress.Data.csproj
@@ -50,7 +50,13 @@
     <Compile Include="ConstantsEnums.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
+    <Compile Include="EntityClasses\AdEntity.cs">
+      <GeneratedBy>LLBLGen Pro</GeneratedBy>
+    </Compile>
     <Compile Include="EntityClasses\AreaEntity.cs">
+      <GeneratedBy>LLBLGen Pro</GeneratedBy>
+    </Compile>
+    <Compile Include="EntityClasses\AttachmentEntity.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
     <Compile Include="EntityClasses\CategoryEntity.cs">
