--- a/Data/DatabaseSpecific/App.config
+++ b/Data/DatabaseSpecific/App.config
@@ -2,6 +2,6 @@
 <configuration>
 	<connectionStrings>
 		<!-- please adjust the connection string embedded in the element below to target the proper catalog / server using the proper user / password combination -->
-		<add name="ConnectionString.SQL Server (SqlClient)" connectionString="Data Source=SQL5044.site4now.net;Initial Catalog=DB_A4D6F8_AqarPress;User Id=DB_A4D6F8_AqarPress_admin;Password=Yota1379.;"/>
+		<add name="ConnectionString.SQL Server (SqlClient)" connectionString="data source=.;initial catalog=DB_A4D6F8_AqarPress;integrated security=SSPI;persist security info=False"/>
 	</connectionStrings>
 </configuration> 
