--- a/Data/View/View.csproj
+++ b/Data/View/View.csproj
@@ -40,6 +40,9 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ad.cs">
+      <GeneratedBy>LLBLGen Pro</GeneratedBy>
+    </Compile>
     <Compile Include="ProjectView.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
