--- a/Data/AqarPress.Migration/packages.config
+++ b/Data/AqarPress.Migration/packages.config
@@ -22,6 +22,8 @@
   <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Features" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Data.Sqlite" version="3.1.2" targetFramework="net461" />
+  <package id="Microsoft.Data.Sqlite.Core" version="3.1.2" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
@@ -38,10 +40,14 @@
   <package id="Serilog" version="2.8.0" targetFramework="net461" />
   <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net461" />
   <package id="SharpZipLib" version="1.0.0" targetFramework="net461" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.2" targetFramework="net461" />
+  <package id="SQLitePCLRaw.core" version="2.0.2" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.2" targetFramework="net461" />
+  <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.2" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net461" />
   <package id="System.Data.SqlClient" version="4.4.0" targetFramework="net461" />
-  <package id="System.Memory" version="4.5.1" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="net461" />
